fix(styles): overflow on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -211,6 +211,10 @@ main {
     padding: 0;
   }
 
+  main > * {
+    max-width: 100vw;
+  }
+
   main > *:not(.-spans-full) {
     grid-column: 2 / span 1;
     margin-left: auto;
